# myPSD

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md
.github/workflows/: hf-sync.yml
backend/: pyproject.toml
backend/app/: main.py  models.py  scatter.py  snow.py
backend/tests/: test_scatter.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  presets.ts  styles.css  theme.ts  types.ts
frontend/src/components/: Assumptions.tsx  Controls.tsx  HelpTip.tsx  MetricsTable.tsx  PSDPlot.tsx  References.tsx
