[project]
name = "mypsd-backend"
version = "1.0.0"
description = "FastAPI backend for myPSD — polarimetric radar PSD explorer"
requires-python = ">=3.10"
dependencies = [
    "rustmatrix>=1.0.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "numpy>=1.23",
    "scipy>=1.10",
]

[tool.uv.sources]
# rustmatrix is not on PyPI yet — build from the sibling checkout.
# The Dockerfile builds a wheel directly and installs that instead.
rustmatrix = { path = "../../Radar/rustmatrix", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
