[project]
name = "mypsd-backend"
version = "2.0.0"
description = "FastAPI backend for myPSD — polarimetric radar PSD explorer"
requires-python = ">=3.10"
dependencies = [
    "rustmatrix>=2.1.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
